# vss-base-software

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  update-versions.py  version.cmake
libs/communication/: CMakeLists.txt
libs/communication/include/communication/: commbst.cpp  commbst.h
libs/communication/libs/nRF24Communication/: commConfig.h  commTypes.h
libs/protobufs/: CMakeLists.txt
scripts/: essentials.txt  protobuf.sh  setup.py
src/: CMakeLists.txt  main.cpp
src/AbstractModules/: AbstractModules.h
src/AbstractModules/BehaviorBase/: BehaviorBase.cpp  BehaviorBase.h
src/AbstractModules/CommunicationBase/: CommunicationBase.cpp  CommunicationBase.h
src/AbstractModules/DecisionBase/: DecisionBase.cpp  DecisionBase.h
src/AbstractModules/Environment/: Environment.cpp  Environment.h
src/AbstractModules/NavigationBase/: NavigationBase.cpp  NavigationBase.h
src/AbstractModules/PlanningBase/: PlanningBase.cpp  PlanningBase.h
src/AbstractModules/ProcessedVisionBase/: ProcessedVisionBase.cpp  ProcessedVisionBase.h
src/AbstractModules/RefereeBase/: RefereeBase.cpp  RefereeBase.h
src/AbstractModules/VisionBase/: VisionBase.cpp  VisionBase.h
src/Entities/: Entities.h
src/Entities/Robot/: Robot.cpp  Robot.h
src/Env/: Env.h
src/Field/: Field.cpp  Field.h
src/Modules/: Modules.cpp  Modules.h
src/Paintings/: Paintings.h
src/Paintings/DrawCIninho/: DrawCIninho.h
src/Paintings/DrawField/: DrawField.cpp  DrawField.h
src/ThreadPools/: ThreadPools.cpp  ThreadPools.h
src/Utils/: Utils.cpp  Utils.h
(+61 files in other folders)
